--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			<h1 class="fuente-kaushan fuente-tam color-verde animate__animated animate__fadeI" style="color: #E0A023; margin-top: 20px; font-size: 5em;"> 
 				<img src="imgs/logo.png" alt="" style="width: 12%;">Golden Bee</h1>		
 			<div id="div-index" class="animate__animated animate__flipInX">
-				<h2 class="fuente-lato" style="font-size: 1.5em; margin-top:-15px;" >Sabor de la naturaleza, del campo a tu mesa.</h2>
+				<h2 class="fuente-lato" style="font-size: 1.5em; margin-top:-15px;" >Sabor de la Naturaleza, del campo a tu mesa.</h2>
 				<p style="margin-top: 30px;">Nuestra empresa te brinda la oportunidad de deleitarte en cualquier lugar de la forma mas natural.</p>
 				<nav class="nav-barra-inferior">
 					<a href = "menu.html" class="margen-derecha">Menú</a>
