ajuste imagen redonda

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 				</div>
 			</div>
 		</header>			
-		<div class="col-md-6 center quitar-float text-center espacio-arriba">
-			<img id="img-home" src= "imgs/palo.gif" class="animate__animated animate__fadeIn img-tam-mediano" style="margin-top: 60px;">
+		<div style="text-align: center; margin-top: 80px;" >		
+			<img id="img-home" src= "imgs/palo-redondo.gif" class="animate__animated animate__fadeIn img-tam-mediano" style="margin-top: 60px;">			
 			<h1 class="fuente-kaushan fuente-tam color-verde animate__animated animate__fadeI" style="color: #E0A023; margin-top: 20px; font-size: 5em;"> 
 				<img src="imgs/logo.png" alt="" style="width: 12%;">Golden Bee</h1>		
 			<div id="div-index" class="animate__animated animate__flipInX">
