--- a/contactos.html
+++ b/contactos.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<meta charset= "utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/main.css">		
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Zilla+Slab:wght@500&display=swap" rel="stylesheet">
 		<title>5GT</title>
