--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<h2 class="fuente-lato" style="font-size: 1.5em; margin-top:-15px;" >Sabor de la Naturaleza, del campo a tu mesa.</h2>
 					<p style="margin-top: 30px;">Nuestra empresa te brinda la oportunidad de deleitarte en cualquier lugar de la forma mas natural.</p>
 					<nav class="nav-barra-inferior">
-						<a href = "menu.html" class="margen-derecha">Menú</a>
+						<a href = "menu.html" class="margen-derecha">Productos</a>
 						<a href = "contactos.html" class="margen-derecha" class="margen-derecha">Contactos</a>
 						<a href = "Acercade.html" class="margen-derecha">Acerca de</a>
 						<a href = "https://sites.google.com/view/spotifynetflixcombo/inicio" class="margen-derecha">Redes Sociales</a>	
