mejoras ioncreibeles golden bee

--- a/index.html
+++ b/index.html
@@ -49,20 +49,61 @@
 
 			<div class="info-container" >		
 				<img id="img-home" src= "imgs/palo-redondo.gif" class="animate__animated animate__fadeIn img-tam-mediano">			
-				<h1 class="fuente-kaushan fuente-tam color-verde animate__animated animate__fadeI" style="color: #E0A023; margin-top: 20px; font-size: 5em;"> 
-					<img src="imgs/logo.png" alt="" style="width: 12%;">Golden Bee</h1>		
+				<h1 id="info-title" class="fuente-kaushan fuente-tam color-verde animate__animated animate__fadeIn"> 
+					<img class="img-logo" src="imgs/logo.png" alt="">Golden Bee</h1>		
 				<div id="div-index" class="animate__animated animate__flipInX">
 					<h2 class="fuente-lato" style="font-size: 1.5em; margin-top:-15px;" >Sabor de la Naturaleza, del campo a tu mesa.</h2>
-					<p style="margin-top: 30px;">Nuestra empresa te brinda la oportunidad de deleitarte en cualquier lugar de la forma mas natural.</p>
-					<nav class="nav-barra-inferior">
-						<a href = "menu.html" class="margen-derecha">Productos</a>
-						<a href = "contactos.html" class="margen-derecha" class="margen-derecha">Contactos</a>
-						<a href = "Acercade.html" class="margen-derecha">Acerca de</a>
-						<a href = "https://sites.google.com/view/spotifynetflixcombo/inicio" class="margen-derecha">Redes Sociales</a>	
-						<a href = "https://www.instagram.com/moss_planet_/">Instragram</a>		
-					</nav>				
+					<p style="margin-top: 30px;">Nuestra empresa te brinda la oportunidad de deleitarte en cualquier lugar de la forma mas natural.</p>				
 				</div>				
 			</div>
+
+			<div class="cards-container" style="text-align: center;">
+				<figure class="figure-container">
+					<img src="imgs/icono-mision.png" alt="">
+					<h1>Mision</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
+				</figure>	
+
+				<figure class="figure-container">
+					<img src="imgs/icono-vision.png" alt="">
+					<h1>Vision</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
+				</figure>	
+				
+				<figure class="figure-container">
+					<img src="imgs/icono-vision.png" alt="">
+					<h1>Vision</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
+				</figure>	
+
+				<figure class="figure-container">
+					<img src="imgs/icono-vision.png" alt="">
+					<h1>Vision</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
+				</figure>	
+
+				<figure class="figure-container">
+					<img src="imgs/icono-vision.png" alt="">
+					<h1>Vision</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
+				</figure>	
+
+				<figure class="figure-container">
+					<img src="imgs/icono-vision.png" alt="">
+					<h1>Vision</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
+				</figure>	
+			</div>
+
+
+			<nav class="info-container nav-barra-inferior animate__animated animate__fadeIn">
+				<a href = "menu.html" class="margen-derecha">Productos</a>
+				<a href = "contactos.html" class="margen-derecha" class="margen-derecha">Contactos</a>
+				<a href = "Acercade.html" class="margen-derecha">Acerca de</a>
+				<a href = "https://www.facebook.com/profile.php?id=100009055449064" class="margen-derecha">Redes Sociales</a>	
+				<a href = "https://www.instagram.com/castelll0009/?hl=es-la">Instragram</a>		
+				<a style="background-color: rgb(236, 132, 72); border-radius: 5px; padding-left: 8px; padding-right: 8px; color: beige;"  href = "https://drive.google.com/file/d/1NDsNjMkE4laC038JCCZmbtsV9ulMIvaF/view?usp=sharing">CV-Developer</a>	
+			</nav>				
 			
 		</main>	  
 		<audio id="buzz">	  
