--- a/contactos.html
+++ b/contactos.html
@@ -16,8 +16,8 @@
 					<img src="imgs/logo.png" style="width: 10%;">
 					<a href="index.html" class="fuente-tam-mediano fuente-kaushan"> Golden Bee</a></li>
 				<li class="col-md-3 inline-block-barra"><a href="contactos.html" class="fuente-color-negro" >Contactos</a></li>
-				<li class="col-md-3 inline-block-barra">Productos</li>
-				<li class="col-md-3 inline-block-barra">Acerca de</li>
+				<li class="col-md-3 inline-block-barra"><a href="menu.html" class="fuente-color-negro" >Productos</a></li>
+				<li class="col-md-3 inline-block-barra"><a href="acercade.html" class="fuente-color-negro" >Acerca de</a></li>
 			</ul>
 		</nav>
 		<section>
@@ -26,10 +26,22 @@
 				<p>Parque Caldas, Popayán , Cauca</p>
 				<p>
 					Escribenos a <a href="mailto:mossplaneta@gmail.com"> Goldenbee@gmail.com </a>
+					Desarrollador web <a href="mailto:castelll0009@gmail.com"> castelll0009@gmail.com </a>
 				</p>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.1954050316285!2d-76.60846258582097!3d2.4418727577754646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30030ff9207c27%3A0xf76217f9f8464ebe!2sParque%20Caldas!5e0!3m2!1ses!2sco!4v1617748390833!5m2!1ses!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+				<iframe  id="iframe-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3986.1954050316285!2d-76.60846258582097!3d2.4418727577754646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e30030ff9207c27%3A0xf76217f9f8464ebe!2sParque%20Caldas!5e0!3m2!1ses!2sco!4v1617748390833!5m2!1ses!2sco" allowfullscreen="" loading="lazy"></iframe>
 				
 			</div>
-		</section>				
+		</section>	
+		
+		
+		<nav class="info-container nav-barra-inferior animate__animated animate__fadeIn">
+			<a href = "menu.html" class="margen-derecha">Productos</a>
+			<a href = "contactos.html" class="margen-derecha" class="margen-derecha">Contactos</a>
+			<a href = "Acercade.html" class="margen-derecha">Acerca de</a>
+			<a href = "https://www.facebook.com/profile.php?id=100009055449064" class="margen-derecha">Redes Sociales</a>	
+			<a href = "https://www.instagram.com/castelll0009/?hl=es-la">Instragram</a>		
+			<a style="background-color: rgb(236, 132, 72); border-radius: 5px; padding-left: 8px; padding-right: 8px; color: beige;"  href = "https://drive.google.com/file/d/1NDsNjMkE4laC038JCCZmbtsV9ulMIvaF/view?usp=sharing">CV-Developer</a>	
+		</nav>				
+
 	</body>
 </html>
