--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 				</figure>	
 				
 				<figure class="figure-container">
-					<img src="imgs/icono-vision.png" alt="">
-					<h1>Vision</h1>
+					<img src="imgs/objetivos.png" alt="">
+					<h1>Objetivos</h1>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
 				</figure>	
 
