--- a/contactos.html
+++ b/contactos.html
@@ -37,7 +37,7 @@
 		<nav class="info-container nav-barra-inferior animate__animated animate__fadeIn">
 			<a href = "menu.html" class="margen-derecha">Productos</a>
 			<a href = "contactos.html" class="margen-derecha" class="margen-derecha">Contactos</a>
-			<a href = "Acercade.html" class="margen-derecha">Acerca de</a>
+			<a href = "acercade.html" class="margen-derecha">Acerca de</a>
 			<a href = "https://www.facebook.com/profile.php?id=100009055449064" class="margen-derecha">Redes Sociales</a>	
 			<a href = "https://www.instagram.com/castelll0009/?hl=es-la">Instragram</a>		
 			<a style="background-color: rgb(236, 132, 72); border-radius: 5px; padding-left: 8px; padding-right: 8px; color: beige;"  href = "https://drive.google.com/file/d/1NDsNjMkE4laC038JCCZmbtsV9ulMIvaF/view?usp=sharing">CV-Developer</a>	
