--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				</div>				
 			</div>
 
-			<div class="cards-container" style="text-align: center;">
+			<div class="cards-container" >
 				<figure class="figure-container">
 					<img src="imgs/icono-mision.png" alt="">
 					<h1>Mision</h1>
