--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<figure class="figure-container">
 					<img src="imgs/icono-vision.png" alt="">
 					<h1>Vision</h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. quae quis.</p>	
+					<p>Lorem ipsum dolor sit amet conssectetur adipisicing elit. quae quis.</p>	
 				</figure>	
 				
 				<figure class="figure-container">
