--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset= "utf-8">
 		<link rel="stylesheet" href="css/stylemovil.css">	
@@ -18,7 +18,7 @@
 		<main>
 			<header>							
 				<div class="container-header">
-					<span id="menu-button" class="menu-button"><i class="fas fa-bars"></i></span>
+					<span id="menu-button" onClick="showMenu()" class="menu-button"><i class="fas fa-bars"></i></span>
 						
 					<div  class="container-logo-title">				
 						<img id="zumbido" onClick="buzzing()" class="animate__animated animate__shakeX animate__fast" src="imgs/logo.png" alt="">
