--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset= "utf-8">
 		<link rel="stylesheet" href="css/stylemovil.css">	
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport"  content="width=device-width initial-scale=1.0">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">  
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/main.css">		
@@ -16,6 +16,7 @@
 	</head>
 	<body>
 		<main>
+			<img id="beepc" onclick="vistaEscritorio()" src="imgs/beepc.png" alt=""  >
 			<header>							
 				<div class="container-header">
 					<span id="menu-button" onClick="showMenu()" class="menu-button"><i class="fas fa-bars"></i></span>
@@ -79,14 +80,15 @@
 						<img src="imgs/icono-vision.png" alt="">
 						<h1>Vision</h1>
 						<p>Para el año 2026 Golden Bee (ACIAGO) se
-							consolidará como empresa líder a nivel nacional en
+							consolidará como empresa líder a nivel nacional y tendra influencia internacional en
 							el fomento de la Apicultura, el cuidado de las abejas
 							y el medio ambiente. Continuará generando
 							procesos de innovación, actualización y
 							mejoramiento continuo, con el propósito de
 							sensibilizar a la comunidad sobre la importancia de
 							las abejas y los beneficios del consumo de sus
-							productos. Para Golden Bee siempre será una
+							productos, apalacandose siempre con las herramientas 
+							digitales para tener mayor alcanze y protagonismo. Para Golden Bee siempre será una
 							prioridad mantener la calidad e inocuidad de los
 							productos de las abejas y la plena confianza y
 							satisfacción de nuestros clientes, proveedores y
@@ -102,11 +104,12 @@
 						de abejas 100% natural con unos
 						excelentes estándares de calidad,
 						generando conciencia de consumo y de
-						cuidado de las abejas. Además queremos
-						aplicar la tecnología de punta y marketing
-						digital, para que en un futuro nuestros
-						productos puedan deleitar paladares a
-						nivel internacional.</p>
+						cuidado de las abejas. siempre estara al tanto de 
+						las nuevas tecnologias, de las tendencias, 
+						con lo cual se asegurara su vigencia  y superara
+						los estandares,  asi en el futuro Golden Bee y sus productos podran deleitar no solo 
+						a nuestra gente, sino que tambien le dara una dulce probada 
+						del campo Colombiano a personas de todo el mundo.</p>
 					</div>					
 				</figure>	
 				<figure class="figure-container">
