--- a/acercade.html
+++ b/acercade.html
@@ -88,7 +88,7 @@
                         <div class="div-figure" >
                             <img src="imgs/especificos.png" alt="">
                         <h1>Objetivos Especificos</h1>
-                        <p>1.<br> Garantizar la calidad 100% natural de nuestros y así
+                        <p>1.<br> Garantizar la calidad 100% natural de nuestros productos y así
                             crear una conciencia del consumo de esta, iniciar el desarrollo de nuestro aplicativo web.
                             <br> 						
                             2.<br> En 3 años ser reconocidos como la
