--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div class="div-figure" >
 						<img src="imgs/especificos.png" alt="">
 					<h1>Objetivos Especificos</h1>
-					<p>1.<br> Garantizar la calidad 100% natural de nuestros y así
+					<p>1.<br> Garantizar la calidad 100% natural de nuestros productos y así
 						crear una conciencia del consumo de esta, iniciar el desarrollo de nuestro aplicativo web.
 						<br> 						
 						2.<br> En 3 años ser reconocidos como la
@@ -187,6 +187,7 @@
 						<img class="img-responsabilidad" src="imgs/r3.png" alt="">
 						<img class="img-responsabilidad" src="imgs/r4.png" alt="">
 						<img class="img-responsabilidad" src="imgs/r5.png" alt="">
+						<img class="img-tercio" src="imgs/tercio.png" alt="">
 						<p style="font-weight: 700;">El papel que juegan las abejas en el medio ambiente es
 							fundamental ya que su labor de polinización es
 							insustituible. Sin polinizadores un tercio de nuestra
