--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 					<div class="sona0 sona5 div-figure" style="text-align: center; justify-content: center;">
 						<img src="imgs/calidad.png" alt="">
 						<h1>Calidad</h1>																
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+						<p>Nuestra calidad va desde la producción 100% natural, 
+							el empacado premium hasta la entrega segura y eficiente del producto.
 						<span class="puntos0 puntos5" style="color:rgb(126, 126, 126)">...Leer Más</span>	
-						<span class=" text0"  id="text5">	
-						quae quis.
+						<span class=" text0"  id="text5">							
 						<img id="img-calidad" src="imgs/Etiqueta.png" alt="">	
 						<span style="color:rgb(163, 161, 161)"><br> <br>Leer Menos</span></p>				
 					</div>					
@@ -255,10 +255,23 @@
 					<div class="sona0 sona7 div-figure" >
 						<img src="imgs/seguridad.png" alt="">
 						<h1>Seguridad y salud en el trabajo</h1>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+						<p>Apicultura: riesgos no tan dulces como la miel.
+							picaduras,riesgos, medidas preventivas, tranporte y desplazamiento							
 						<span class="puntos0 puntos7" style="color:rgb(126, 126, 126)">...Leer Más</span>	
 						<span class="text0"  id="text7">
-						quae quis.
+							seguro de colmenas, manejo de productos quimicos,
+							EPI y Documentacion preventiva.
+							<br>
+							<br>
+							-Mono Careta
+							<br>
+						  -Guantes
+						  <br>
+						  -Calzado 
+						  <br>
+						  -cerrado y adecuado al terreno Polainas (opcional)
+						  <br>
+						  El mono del apicultor, así como los guantes y la careta deberán ser de color blanco.
 						<span style="color:rgb(163, 161, 161)"><br> <br>Leer Menos</span></p>
 					</div>					
 				</figure>	
@@ -267,9 +280,11 @@
 					<div class="sona0 sona8 div-figure" >
 						<img src="imgs/responsabilidad.png" alt="">
 						<h1>Responsabilidad social y ambiental</h1>						
-						<p style="font-weight: 500;">El papel que juegan las abejas en el medio
+						<p style="font-weight: 500;">	No todo en la apicultura es miel,
+							<br>El papel que juegan las abejas en el medio
 						<span class="puntos0 puntos8" style="color:rgb(126, 126, 126)">...Leer Más</span>	
 						<span class="text0"  id="text8">
+					
 						ambiente es	fundamental ya que su labor de polinización es
 						insustituible. Sin polinizadores un tercio de nuestra
 						alimentación desaparecería, y lo que es aún más grave,
@@ -290,10 +305,11 @@
 					<div class="sona0 sona9 div-figure" >
 						<img src="imgs/organigrama.png" alt="">
 						<h1>Organigrama</h1>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit
+						<p>Un organigrama es la representación gráfica de la estructura de una empresa o cualquier otra organización, 
+						
 						<span class="puntos0 puntos9" style="color:rgb(126, 126, 126)">...Leer Más</span>	
 						<span class="text0"  id="text9">
-						quae quis.
+							que incluye las estructuras departamentales y, en algunos casos, las personas que las dirigen, hacen un esquema sobre las relaciones jerárquicas y competenciales de vigor.
 						<span style="color:rgb(163, 161, 161)"><br> <br>Leer Menos</span></p>
 					</div>					
 				</figure>	
