--- a/acercade.html
+++ b/acercade.html
@@ -9,10 +9,9 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>		
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Zilla+Slab:wght@500&display=swap" rel="stylesheet">
-		<title>Mojitos La Argentina</title>
-
+		<title>5GT</title>
 	</head>
-	<body>        
+	<body>
         <img id="beepc" onclick="vistaEscritorio()" src="imgs/beepc.png" alt=""  >
 
 		<nav class="fondo-gris padding-largo text-center">
